k8s/deployment-payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    service: payment
spec:
  replicas: 3
  selector:
    matchLabels:
      service: payment
  template:
    metadata:
      labels:
        service: payment
    spec:
      containers:
        - name: payment
          image: payment:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 3001
